@@ -1,0 +1,8 @@
+"UnlitGeneric"
+{
+	"$baseTexture" "sprites/acf_tracer"
+	
+	"$additive" 1
+	"$vertexcolor" 1
+	"$vertexalpha" 1
+}
